packages/ingest/container-rust/tests/ui/xmlspec/fail/mixed_static_dynamic_guard.stderr
error: ancestor(...) and parent(...) arguments must be reducible to tag(...) checks
  --> tests/ui/xmlspec/fail/mixed_static_dynamic_guard.rs:3:1
   |
 3 | / xmlspec! {
 4 | |     schema MixedGuardSchema {
 5 | |         record Item
 6 | |         from tag("item")
...  |
12 | | }
   | |_^
   |
   = note: this error originates in the macro `xmlspec` (in Nightly builds, run with -Z macro-backtrace for more info)
